Correcting JSON responses
